--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,11 @@
     <script type="text/javascript" src="resources/js/angular-recaptcha.min.js"></script>
     <script type="text/javascript" src="resources/js/moment-timezone-with-data.min.js"></script>
     <script src="//dh2dw20653ig1.cloudfront.net/studio-app/8.4.1.1.2786/wmapp/scripts/wm-loader.min.js"></script>
+    <script type="text/javascript" src="resources/js/ui-grid.js"></script>
+
     <script src="app.js"></script>
+    <!-- UI Grid CSS -->
+    <link rel="stylesheet" href="resources/css/ui-grid.min.css" />
     <!-- Print CSS -->
     <link rel="stylesheet" href="print.css" type="text/css" media="print">
     <!--fav icon-->
