-cx2 DB: updated InspectionDesigns to make "ScheduleDateOnly" and "ScheduleDateandTime" booleans as requested -Forms: deleted "Violations" tab -EditForm/Status Dialog- made "AllowSharedWithEdits" setting depend on "AllowAuthorEdits"=true. still need to add script to clear SharedWithEdits check when AuthorEdits is unchecked -UserOpenForms- added time filter to DateCreated field -EditInspection: unscrambled Settings page, added new booleans Files modified - [cx2_published_dataModel.json,CodeList.java,EditForm.variables.json,EditInspection.html,Forms.html,MasterInspections.java,UserOpenForms.html,FormToInspectionCategoryMapping.java,MasterCases.java,EditForm.html,Forms.variables.json,CodeSets.java,EditInspection.variables.json,InspectionDesign.java,LetterTemplates.java]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -427,13 +427,13 @@
                                                                         </wm-gridcolumn>
                                                                     </wm-gridrow>
                                                                     <wm-gridrow name="gridrow120_1" padding="unset unset 1em unset">
-                                                                        <wm-gridcolumn columnwidth="4" name="gridcolumn36_1" padding="unset 1em unset unset">
-                                                                            <wm-form-field name="allowSharedWithEdits" displayname="Allow &quot;Shared With&quot; Edits" show="true" primary-key="false" generator="assigned" key="allowSharedWithEdits" type="boolean"
-                                                                            widget="checkbox" placeholder="" hint="This allows users that the form has been shared with to edit the form while in this status." defaultvalue="false"></wm-form-field>
-                                                                        </wm-gridcolumn>
                                                                         <wm-gridcolumn columnwidth="4" name="gridcolumn42_1" padding="unset 1em unset unset">
                                                                             <wm-form-field name="allowAuthorEdits" displayname="Allow &quot;Created By&quot; Edits" show="true" primary-key="false" generator="assigned" key="allowAuthorEdits" type="boolean"
                                                                             widget="checkbox" placeholder="" hint="This allows the user who submitted the form to edit the form information while in this status." defaultvalue="false"></wm-form-field>
+                                                                        </wm-gridcolumn>
+                                                                        <wm-gridcolumn columnwidth="4" name="gridcolumn36_1" padding="unset 1em unset unset">
+                                                                            <wm-form-field name="allowSharedWithEdits" displayname="Allow &quot;Shared With&quot; Edits" show="true" primary-key="false" generator="assigned" key="allowSharedWithEdits" type="boolean"
+                                                                            widget="checkbox" placeholder="" hint="This allows users that the form has been shared with to edit the form while in this status." defaultvalue="false" disabled="bind:!Widgets.lfFormTypeStatus.formWidgets.allowAuthorEdits.datavalue"></wm-form-field>
                                                                         </wm-gridcolumn>
                                                                         <wm-gridcolumn name="gridcolumn1" columnwidth="4" padding="unset 1em unset unset">
                                                                             <wm-form-field name="publicRead" displayname="Allow Public Read Access" show="true" primary-key="false" generator="assigned" key="publicRead" type="boolean" widget="checkbox" defaultvalue="false"
