--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -1,5 +1,5 @@
 <wm-partial data-ng-controller="leftnavPageController" name="leftnav" type="leftnav">
-    <wm-nav name="DevDataEntry" type="pills" layout="stacked">
+    <wm-nav name="DevDataEntry" class="sticky" type="pills" layout="stacked">
         <wm-nav-item name="list_dashboard">
             <wm-anchor caption="My Dashboard" name="dashboardLink" iconclass="wi wi-apps" on-click="Variables.goToPage_Main.invoke()" accessroles="Everyone" badgevalue="bind:Variables.UserOpenFormsCount.dataSet.dataValue"></wm-anchor>
         </wm-nav-item>
