Creating Transaction and Updating Fee status Removing fees from all user carts New files added - [UpdateMultipleFeeStatusRequest.java] Files modified - [InsertProjectMessageRequest.java,Cx2QueryExecutorServiceImpl.java,MyCart.js,UpdateNewPasswordRequest.java,cx2-queries.hbm.xml,QueryExecutionController.java,MunicipalityCheckOut.html,MunicipalityCheckOut.js,InsertFormMessageRequest.java,MyCart.html,cx2_query.json,MunicipalityCheckOut.variables.json,index.html,Cx2QueryExecutorService.java]

--- a/src/main/webapp/pages/MunicipalityCheckOut/MunicipalityCheckOut.html
+++ b/src/main/webapp/pages/MunicipalityCheckOut/MunicipalityCheckOut.html
@@ -52,7 +52,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow9">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn14" horizontalalign="right">
-                                        <wm-button class="btn-default btn-primary" caption="Submit" type="button" margin="unset 0.5em" name="buttonSubmit"></wm-button>
+                                        <wm-button class="btn-default btn-primary" caption="Submit" type="button" margin="unset 0.5em" name="buttonSubmit" on-click="Variables.lvCheckOut.createRecord()"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
