--- a/src/main/webapp/pages/topnav/topnav.html
+++ b/src/main/webapp/pages/topnav/topnav.html
@@ -1,5 +1,5 @@
 <wm-partial data-ng-controller="topnavPageController" name="topnav" type="topnav">
-    <wm-navbar name="navbar1">
+    <wm-navbar name="navbar1" id="topnavbar" sticky="topnavbar" style="z-index: 20">
         <wm-nav name="leftTopLinks" type="navbar" class="navbar-left"></wm-nav>
         <wm-nav name="rightTopLinks" type="navbar" class="navbar-right">
             <wm-nav-item name="list_cart">
