- Proper way of creating InspectionDesigns - Added custom delete dialog as that resolved a permission denied error Files modified - [Cx2QueryExecutorServiceImpl.java,cx2-queries.hbm.xml,QueryExecutionController.java,ManageInspections.html,cx2_query.json,InspectionController.java,Cx2QueryExecutorService.java,InspectionService.java,ManageInspections.js,ManageInspections.variables.json,pom.xml]

--- a/src/main/webapp/pages/ManageInspections/ManageInspections.html
+++ b/src/main/webapp/pages/ManageInspections/ManageInspections.html
@@ -38,30 +38,10 @@
                                         <wm-checkbox scopedatavalue="row['municipalityInternalInspection']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
                                     </wm-grid-column>
                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                    <wm-grid-action key="addNewRow" display-name="New Design" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Design" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                    <wm-grid-action key="addNewRow" display-name="New Design" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Design" action="Widgets.dlgCreateInspectionDesign.open()" shortcutkey="" disabled="false"></wm-grid-action>
                                     <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="Variables.goToPage_EditInspection.invoke()" disabled="false"></wm-grid-row-action>
-                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Widgets.dlgDeleteInspectionDesign.open()" disabled="false"></wm-grid-row-action>
                                 </wm-grid>
-                                <wm-liveform novalidate="false" errormessage="" title="Create Inspection Design" formlayout="dialog" iconclass="wi wi-find-in-page" dataset="bind:Variables.InspectionDesignData.dataSet" captionalign="left" captionposition="top"
-                                name="liveformInspectiondesign">
-                                    <wm-layoutgrid columns="1" name="layoutgrid2">
-                                        <wm-gridrow name="gridrow5">
-                                            <wm-gridcolumn columnwidth="12" name="gridcolumn6">
-                                                <wm-form-field name="inspectDesignName" displayname="Inspection Design Name" show="true" primary-key="false" generator="assigned" key="inspectDesignName" type="string" readonly="false" required="true" widget="text"
-                                                maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
-                                            </wm-gridcolumn>
-                                        </wm-gridrow>
-                                    </wm-layoutgrid>
-                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
-                                    <wm-form-field name="municipalities" displayname="Municipalities" show="false" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" readonly="false" required="false"
-                                    widget="select" placeholder="Select value" defaultvalue="bind:Variables.SelectedMunicipalityObject.firstRecord" dataset="bind:Variables.SelectedMunicipalityObject.dataSet" datafield="All Fields" displayfield="municipalityName"></wm-form-field>
-                                    <wm-form-field name="createdAt" displayname="Created At" show="false" primary-key="false" generator="assigned" key="createdAt" type="timestamp" readonly="false" required="false" widget="timestamp" placeholder="Select date time"
-                                    outputformat="timestamp" defaultvalue="CURRENT_DATE"></wm-form-field>
-                                    <wm-form-field name="users" displayname="Users" show="false" primary-key="false" generator="assigned" key="users" type="list" is-related="true" readonly="false" required="false" widget="select" placeholder="Select value"
-                                    defaultvalue="bind:Variables.CurrentUserDetails.dataSet"></wm-form-field>
-                                    <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
-                                    <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
-                                </wm-liveform>
                             </wm-livegrid>
                         </wm-panel>
                     </wm-gridcolumn>
@@ -108,4 +88,39 @@
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
+    <wm-view class="dialog-view" name="view1">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Create Inspection Design" iconclass="wi wi-file-text" name="dlgCreateInspectionDesign">
+            <wm-layoutgrid name="layoutgrid4">
+                <wm-gridrow name="gridrow8_1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn13">
+                        <wm-composite name="composite2">
+                            <wm-label class="col-md-3 control-label" name="label7" caption="Design Name"></wm-label>
+                            <wm-container class="col-md-9" name="container2">
+                                <wm-text name="textInspectionDesignName" placeholder="Enter Design Name"></wm-text>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions1">
+                <wm-button class="btn-secondary" caption="Cancel" type="button" margin="unset 0.5em" name="buttonCancelCreation" on-click="Widgets.dlgCreateInspectionDesign.close()" iconclass="wi wi-cancel"></wm-button>
+                <wm-button class="btn-primary" caption="Create" on-click="Variables.svCreateInspectionDesign.invoke();Widgets.dlgCreateInspectionDesign.close()" name="buttonCreateDesign" iconclass="wi wi-add"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="view2">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Delete Inspection Design" iconclass="wi wi-delete" name="dlgDeleteInspectionDesign">
+            <wm-layoutgrid name="layoutgrid4_1">
+                <wm-gridrow name="gridrow8_2">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn13_1">
+                        <wm-label padding="unset 0.5em" name="label8" caption="bind:'Are you sure you want to delete the &quot;'+Widgets.gridInspectiondesign.selecteditem.inspectDesignName+'&quot; inspection design?'"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions2">
+                <wm-button class="btn-secondary" caption="Cancel" type="button" margin="unset 0.5em" name="button4" iconclass="wi wi-cancel" on-click="Widgets.dlgDeleteInspectionDesign.close()"></wm-button>
+                <wm-button class="btn-primary" caption="Yes" on-click="closeDialog();Variables.svDeleteInspectionDesign.invoke()" name="button3" iconclass="wi wi-check"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
 </wm-page>
