--- a/src/main/webapp/pages/MunicipalityCheckOut/MunicipalityCheckOut.html
+++ b/src/main/webapp/pages/MunicipalityCheckOut/MunicipalityCheckOut.html
@@ -63,4 +63,7 @@
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
+    <wm-view class="dialog-view" name="viewPaymentSuccess">
+        <wm-alertdialog name="alertdialogPaymentSuccess" message="Thank you for your payment" alerttype="success" title="Payment Success" iconclass="wi wi-attach-money" on-ok="Variables.goToPage_MyCart.invoke()"></wm-alertdialog>
+    </wm-view>
 </wm-page>
